--- a/landing.pug
+++ b/landing.pug
@@ -7,10 +7,11 @@ html
 		header
 			h1 PlatziGames
 			a.boton Registro
-
-		h1 Título 
-		p Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nesciunt delectus fugiat odit doloremque facilis eos soluta quae nulla tempore mollitia porro praesentium eveniet culpa fugit voluptas, corporis, harum saepe.
-		div
-			span Leer
-		div 
-		  a Boton 2
+		section.intro 
+			.intro__imagen: img(src="images/imagen.png")
+			.intro__contenido
+				h2 Título Principal
+				p 
+					| Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! 
+					span Assumenda, doloremque iure!
+				a.boton Leer más
