--- a/landing.pug
+++ b/landing.pug
@@ -1,3 +1,5 @@
+-var title = "Título Principal"
+-var titles = ["Título Principal", "Subtítulo 1", "Subtítulo 2", "Subtítulo 3"]
 doctype html
 html
 	head
@@ -10,7 +12,7 @@ html
 		section.intro 
 			.intro__imagen: img(src="images/imagen.png")
 			.intro__contenido
-				h2 Título Principal
+				h2 #{titles[0]}
 				p 
 					| Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! 
 					span Assumenda, doloremque iure!
