--- a/landing.pug
+++ b/landing.pug
@@ -1,5 +1,6 @@
 -var title = "Título Principal"
 -var titles = ["Título Principal", "Subtítulo 1", "Subtítulo 2", "Subtítulo 3"]
+-var user = "David"
 doctype html
 html
 	head
@@ -8,7 +9,10 @@ html
 	body
 		header
 			h1 PlatziGames
-			a.boton Registro
+			if user
+				a Hola, #{user}
+			else
+				a.boton Registro
 		section.intro 
 			.intro__imagen: img(src="images/imagen.png")
 			.intro__contenido
@@ -17,3 +21,6 @@ html
 					| Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! 
 					span Assumenda, doloremque iure!
 				a.boton Leer más
+		ul
+			each title in titles
+				li #{title}
